--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         </div>
         <div class="mb-3">
           <label for="ath_local" class="form-label"
-            >Cargar archivo <i>.xls</i> con la lista de registros exportados de
-            la pasarela de pagos, filtrado por Canal ATH</label
+            >Cargar archivo <i>.xls</i> con la lista de registros exportados del portall web CASH, filtrado por Canal ATH</label
           >
           <input
             type="file"
