--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       sizes="192x192"
     />
     <link
-      href="/libs/bootstrap-5.3.3/css/bootstrap.min.css"
+      href="/diferencia-movi.github.io/libs/bootstrap-5.3.3/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="/libs/fontawesome-free-6.5.2/css/all.min.css"
+      href="/diferencia-movi.github.io/libs/fontawesome-free-6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/diferencia-movi.github.io/css/main.css">
   </head>
   <body>
     <div
@@ -80,11 +80,11 @@
       </div>
     </div>
 
-    <script src="/libs/xlsx-0.18.5/xlsx.full.min.js"></script>
+    <script src="/diferencia-movi.github.io/libs/xlsx-0.18.5/xlsx.full.min.js"></script>
 
-    <script src="/libs/bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="/diferencia-movi.github.io/libs/bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/libs/sweetalert2-11/sweetalert2@11.js"></script>
-    <script type="module" src="/js/main.js"></script>
+    <script src="/diferencia-movi.github.io/libs/sweetalert2-11/sweetalert2@11.js"></script>
+    <script type="module" src="/diferencia-movi.github.io/js/main.js"></script>
   </body>
 </html>
