--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <div class="mb-3">
           <label for="ath_local" class="form-label"
-            >Cargar archivo <i>.xls</i> con la lista de registros exportados del
-            portall web CASH, filtrado por Canal ATH</label
+            >Cargar archivo <i>.xls</i> con la lista de registros detallado exportados del
+            portal web CASH, filtrado por Canal ATH</label
           >
           <input
             type="file"
